# Darkest-Cave

./: .gitignore  CMakeLists.txt  CaveEngineConfigUnix.h.in  CaveEngineConfigWin32.h.in  Darkest-Cave.sln  Darkest-Cave.vcxproj  Darkest-Cave.vcxproj.filters  Doxyfile  README.md  temp.md
CaveEditor/: CMakeLists.txt  CaveEditor.vcxproj  CaveEditor.vcxproj.filters  ObjectInfoDlg.cpp  ObjectInfoDlg.h  color.vs  texture.ps  texture.vs
CaveEditor/Private/: CaveEditor.cpp  CaveEditorDoc.cpp  CaveEditorView.cpp  DirectXView.cpp  Editor.cpp  ListBoxFormView.cpp  MainFrm.cpp
CaveEditor/Private/DirectX/: BitmapClass.cpp  CameraClass.cpp  ColorShaderClass.cpp  D3DClass.cpp  DDSTextureLoader.cpp  GraphicsClass.cpp  InputClass.cpp  ModelClass.cpp  MultiTexture.cpp  Squere.cpp  TextureClass.cpp  TextureShaderClass.cpp  WICTextureLoader11.cpp
CaveEditor/Public/: CaveEditor.h  CaveEditorDoc.h  CaveEditorView.h  DirectXView.h  ListBoxFormView.h  MainFrm.h  framework.h  resource.h
CaveEditor/Public/DirectX/: AlignedAllocationPolicy.h  BitmapClass.h  CameraClass.h  ColorShaderClass.h  D3DClass.h  GraphicsClass.h  InputClass.h  ModelClass.h  MultiTexture.h  Squere.h  TextureClass.h  TextureShaderClass.h  WICTextureLoader11.h
CaveEditor/Resource/: CaveEditor.aps  CaveEditor.rc  CaveEditor.rc2  Editor.aps  Editor.rc  resource.h
CaveEngine/: Assertion.ixx  CMakeLists.txt  CaveEngine.vcxproj  CaveEngine.vcxproj.filters  EngineMain.cpp  EngineMainUnix.cpp  EngineMainWin32.cpp  FiniteStateMachine.cpp  FiniteStateMachine.h  PathFinding.h
CaveEngine/AI/: CMakeLists.txt
CaveEngine/AI/Model/: model.py
CaveEngine/AI/Private/: BehaviorTreeScriptTest2.cpp  BehaviorTreeTestScript.cpp
CaveEngine/AI/Private/BehaviorTree/: ActionNode.cpp  BTActionNode.cpp  BTCompositeNode.cpp  BTNode.cpp  BTRootNode.cpp  BTSelector.cpp  BTSequencer.cpp  BehaviorTreeNode.cpp  CompositeNode.cpp  Decorator.cpp  IfDecorator.cpp  Node.cpp  RandomNode.cpp  RepeatDecorator.cpp  RootNode.cpp  Selector.cpp  Sequencer.cpp  WhileDecorator.cpp
CaveEngine/AI/Private/FiniteStateMachine/: FiniteStateMachine.cpp  State.cpp
CaveEngine/AI/Private/NeuralNetwork/: NeuralNetwork.cpp
CaveEngine/AI/Public/: BehaviorTree.h  BehaviorTreeScriptTest.h  BehaviorTreeScriptTest2.h
CaveEngine/AI/Public/BehaviorTree/: ActionNode.h  ActionNode.ixx  BTActionNode.h  BTCompositeNode.h  BTNode.h  BTRootNode.h  BTSelector.h  BTSequencer.h  BehaviorTreeNode.h  BehaviorTreeNode.ixx  CompositeNode.h  CompositeNode.ixx  Decorator.h  Decorator.ixx  IfDecorator.h  IfDecorator.ixx  Node.h  RandomNode.h  RandomNode.ixx  RepeatDecorator.h  RepeatDecorator.ixx  RootNode.h  RootNode.ixx  Selector.h  Selector.ixx  Sequencer.h  Sequencer.ixx  WhileDecorator.h  WhileDecorator.ixx
CaveEngine/AI/Public/FiniteStateMachine/: FiniteStateMachine.h  FiniteStateMachine.ixx  State.h  State.ixx
CaveEngine/AI/Public/NeuralNetwork/: NeuralNetwork.h
CaveEngine/Audio/: README.md
CaveEngine/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  README.md
CaveEngine/Gameplay/: README.md  (+1 more)
CaveEngine/Graphics/: CMakeLists.txt
CaveEngine/Graphics/Private/: OpenGlTest.cpp
CaveEngine/Graphics/Private/Device/: DeviceResources.cpp  GenericDeviceResources.cpp  GenericWindow.cpp  UnixDeviceResources.cpp  UnixWindow.cpp  Window.cpp  WindowDeviceResources.cpp  WindowsDeviceResources.cpp  WindowsWindow.cpp
CaveEngine/Graphics/Private/Object/: DrawableObject.ixx  GenericDrawableObject.cpp  UnixDrawableObject.cpp  Vertex.cpp  WindowsDrawableObject.cpp
CaveEngine/Graphics/Private/Renderer/: Camera.cpp  CaveApplication.cpp  CaveNode.cpp  CaveRenderer.cpp  GenericRenderer.cpp  GlRenderer.cpp  Renderer.cpp  Renderer.ixx  UnixRenderer.cpp  Window.cpp  WindowRenderer.cpp  WindowsRenderer.cpp  main.cpp
CaveEngine/Graphics/Private/Shader/: GenericShader.cpp  UnixShader.cpp  WindowsShader.cpp
CaveEngine/Graphics/Private/Sprite/: AnimatedSprite.cpp  GenericSprite.cpp  Sprite.cpp  UnixSprite.cpp  Vertex.cpp  WindowsSprite.cpp
CaveEngine/Graphics/Private/Test/: DirectXTest.cpp
CaveEngine/Graphics/Public/: Graphics.h  GraphicsApiPch.h  GraphicsCommon.h  OpenGlTest.h
CaveEngine/Graphics/Public/Device/: BufferManager.ixx  DeviceResources.h  DeviceResources.ixx  GenericDeviceResources.h  GenericWindow.h  ScreenGrab.ixx  UnixDeviceResources.h  UnixWindow.h  Window.h  Window.ixx  WindowDeviceResources.h  WindowsDeviceResources.h  WindowsWindow.h
CaveEngine/Graphics/Public/Object/: DrawableObject.h  GenericDrawableObject.h  UnixDrawableObject.h  Vertex.h  WindowsDrawableObject.h
CaveEngine/Graphics/Public/Renderer/: Camera.h  Camera.ixx  CaveApplication.h  CaveNode.h  CaveRenderer.h  GenericRenderer.h  GlRenderer.h  RenderQueue.ixx  Renderable.ixx  Renderer.h  Renderer.ixx  UnixRenderer.h  Window.h  WindowRenderer.h  WindowsRenderer.h
CaveEngine/Graphics/Public/Shader/: ColorShader.ixx  GenericShader.h  Shader.h  Shader.ixx  UnixShader.h  WindowsShader.h
CaveEngine/Graphics/Public/Shape/: Line.ixx
CaveEngine/Graphics/Public/Sprite/: AnimatedSprite.h  AnimatedSprite.ixx  GenericSprite.h  Sprite.h  Sprite.ixx  UnixSprite.h  Vertex.h  WindowsSprite.h
CaveEngine/Graphics/Public/Test/: Resource.h
CaveEngine/Graphics/Public/TileMap/: Grid.ixx  Tile.ixx  TileManager.ixx  TileMap.ixx  TileSet.ixx
CaveEngine/Graphics/Public/UI/: Text.ixx
CaveEngine/Graphics/Resource/: FontManager.ixx  map.txt  map3.txt  map4.txt  map5.txt  map6.txt  test.txt  test2.txt  test3.txt  testMap.txt
CaveEngine/Graphics/Resource/Textures/: meteo_effect.dds  spaceship.dds
CaveEngine/Graphics/Shader/: DirectXTest.aps  DirectXTest.fxh  DirectXTest.rc  DirectXTestPixelShaderSolid.hlsl  RCa18212  color.ps  color.vs  sprite.frag  sprite.vert  triangles.frag  triangles.vert
CaveSample/: CMakeLists.txt  CaveSample.vcxproj  CaveSample.vcxproj.filters  Main.cpp
Data/: .gitignore  Base_Model.ipynb  MakeGif.ipynb  README.md  baseModel_simplified.ipynb  colabcode.ipynb  model_compair.ipynb  new.js
Engine/: CMakeLists.txt
Samples/: CMakeLists.txt  Main.cpp
Template/: CMakeLists.txt  Main.cpp
(+569 files in other folders)
